--- a/backend/src/main/resources/application-dev.yml
+++ b/backend/src/main/resources/application-dev.yml
@@ -53,7 +53,7 @@ spring:
     serialization:
       write-dates-as-timestamps: false
   elasticsearch:
-    host: http://172.20.12.110:9200/
+    host: 172.20.12.110:9200
     user: elastic
     password: mkYozxvG9TEhWd8
   jpa:
